# data_elexir

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Projet_DE_Cleaner.docx  README.md  arborescence.txt  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  ~$ojet_DE_Cleaner.docx
datalexir/: __init__.py
datalexir/elexbook/: elexbook.py  interactivity.py
datalexir/utils/text/: text_cleaner.py
documentation/: arborescence.txt  arch_finale_p1.md  elexbook.md  sommaire.md
notebooks/: demo_complete.ipynb  elexbook.ipynb  livres_fictifs.csv
